--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
     <script type="text/javascript" src="app/shared/services/apiResourceService.js"></script>
     <script type="text/javascript" src="app/shared/services/appCookieService.js"></script>
     <script type="text/javascript" src="app/shared/services/googleMapsGeocodingApiService.js"></script>
-    <script type="text/javascript" src="app/components/main/main.service.js"></script>
-    <script type="text/javascript" src="app/components/main/main.controller.js"></script>
+    <script type="text/javascript" src="app/shared/promises/geolocationPromise.js"></script>
+    <script type="text/javascript" src="app/components/partials/main/main.service.js"></script>
+    <script type="text/javascript" src="app/components/partials/main/main.controller.js"></script>
+    <script type="text/javascript" src="app/components/modals/current-location/current-location.controller.js"></script>
     <script type="text/javascript">
         app.initialize();
     </script>  
