--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <script type="text/javascript" src="app/shared/constants/events.js"></script>
     <script type="text/javascript" src="app/shared/services/Locale.js"></script>
     <script type="text/javascript" src="app/shared/services/LocaleWeather.js"></script>
+    <script type="text/javascript" src="app/shared/services/WeatherState.js"></script>
     <script type="text/javascript" src="app/shared/services/appEnvironment.js"></script>
     <script type="text/javascript" src="app/shared/services/apiCache.js"></script>
     <script type="text/javascript" src="app/shared/services/apiRequestService.js"></script>
