--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <script type="text/javascript" src="app/components/partials/search/search.directives.js"></script>
     <script type="text/javascript" src="app/components/partials/main/main.service.js"></script>
     <script type="text/javascript" src="app/components/partials/main/main.controller.js"></script>
+    <script type="text/javascript" src="app/components/partials/footer/footer.controller.js"></script>
     <script type="text/javascript" src="app/components/modals/current-location/current-location.controller.js"></script>
     <script type="text/javascript">
         app.initialize();
