Completing main view (without real data), create a svc to transform wind

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <script type="text/javascript" src="app/shared/services/openWeatherMapApiService.js"></script>
     <script type="text/javascript" src="app/shared/services/geolocationFinder.js"></script>    
     <script type="text/javascript" src="app/shared/services/weatherUnits.js"></script>    
-    <script type="text/javascript" src="app/components/partials/search/search.controller.js"></script>
-    <script type="text/javascript" src="app/components/partials/search/search.directives.js"></script>
+    <script type="text/javascript" src="app/shared/services/windDirection.js"></script>    
+    <script type="text/javascript" src="app/components/partials/search/search.controller.js"></script>    
     <script type="text/javascript" src="app/components/partials/main/main.service.js"></script>
     <script type="text/javascript" src="app/components/partials/main/main.controller.js"></script>
     <script type="text/javascript" src="app/components/partials/footer/footer.controller.js"></script>
