--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <script type="text/javascript" src="app/shared/services/wind.js"></script>    
     <script type="text/javascript" src="app/shared/services/weatherData.js"></script>
     <script type="text/javascript" src="app/components/partials/search/search.controller.js"></script>        
+    <script type="text/javascript" src="app/components/partials/search/search.directives.js"></script>        
     <script type="text/javascript" src="app/components/partials/main/main.controller.js"></script>
     <script type="text/javascript" src="app/components/partials/footer/footer.controller.js"></script>
     <script type="text/javascript" src="app/components/partials/admin/admin.controller.js"></script>
