Fix to search blocking cities with spaces in name; enhancing error check from api to show error message

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <script type="text/javascript" src="app/components/partials/search/search.controller.js"></script>        
     <script type="text/javascript" src="app/components/partials/search/search.directives.js"></script>        
     <script type="text/javascript" src="app/components/partials/main/main.controller.js"></script>
+    <script type="text/javascript" src="app/components/partials/main/main.directives.js"></script>
     <script type="text/javascript" src="app/components/partials/footer/footer.controller.js"></script>
     <script type="text/javascript" src="app/components/partials/admin/admin.controller.js"></script>
     <script type="text/javascript" src="app/components/modals/current-location/current-location.controller.js"></script>
